@@ -4,6 +4,7 @@
 - Remove all FOP customisations. BZ #1168765
 - Use FontAwesome for aswesomeness.
 - Switch DocBook-5 HTML to highlight.js.
+- Change splash page group publish directory structure so it can be used directly. BZ #1186990
 
 4.2.6 Tue Oct 21 2014
 - Fix External_Links translation not merging. BZ #1153911
